# MagentaRTOS

./: LICENSE  README.md
Magenta/: .gitignore  CMakeLists.txt
Magenta/rtos/inc/: os_kernel.h  os_types.h
Magenta/rtos/port/: os_port.c  os_port_asm.s
Magenta/rtos/src/: os_kernel.c  os_time.c
Magenta/tests/: main.c
dev/: Scheme_architecture.txt
